--- a/main.tex
+++ b/main.tex
@@ -395,22 +395,23 @@ $$\begin{array}{ll}
 \qquad  \qquad \Leftrightarrow \\
 G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
-This value will be confirmed, in the ppb range, in Section 4.
+This value will be confirmed, in the ppb range, in Section 4. The pertinence of such a simple polynomial cannot be admitted by the standard community, for instance arguing that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants $g$ and $g^{\prime}, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the realorigin of everything. It is strange that this term \textit{immergence} is a neologism. 
 
 \subsubsection{The omnipresence of the Kotov cycle in astrophysics}
 
-With $t = R/c$, the relation $(t t_{K2} )^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
+With $t = R/c$, the relation $(t t_{K}^2)^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
 climate variation, was also of flickering cosmic origin [12]. This hypothesis has been recently
 confirmed by the straight temporal profile of the phenomena, showing it is tied to a quantum
-process \cite{Kotov}.
+process [13].
 This Kotov perodicity implies a moderate climate variation. Now, a much larger one, involving
 glaciations, is tied to the Milankovitch period (100000 years), which presents also a straight
-temporal edge. Moreover, these two periods seem to be tied to the dimensions n = 24 and $\Gamma \approx 25$,
+temporal edge. Moreover, these two periods seem to be tied respectively to the dimensions n = 24 and $\Gamma \approx 25$,
 characteristics respectively of a stellar system and a galaxy, see Fig.1. As the second period was
 attributed to an earth orbital oscillation due to Jupiter effects, this suggests that the solar system is
 tied to cosmic influence. Indeed, the Kotov period shows itself rather particular in the solar system.
-In particular, the Uranus orbital radius is very close to the Kotov length $l_{K} = ct_{K}$ .
+In particular, the Uranus orbital radius is very close to the Kotov length $l_{K} = ct_{K}$.
+
 Remarkable enough, a `mysterious` period $\approx 1/9$ days of the Sun's pulsations has been predicted
 long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin
 (1946) claimed that « la periode propre de vibration du Soleil, c'est-a-dire la periode de son infra-
@@ -419,30 +420,35 @@ the Sevin's «vibration period» of the Sun was merely an issue of his reflectio
 and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were
 discovered, after decades, - and independently of the Sevin's paper, - by a few groups of
 astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of
-Cosmos too (see Kotov, 2018, and references therein) .
+Cosmos too [9].
+
 Opponents emphasize often that $t_{K}$ is very close to the 9th harmonic of the mean terrestrial day: the corresponding ratio - of the length of a day to the $t_{K}$ period - is equal to 8.99943(1), - and claim
 thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979;
 Fossat et al., 2017). As a matter of fact, however, the $t_{K}$ period occurs to be the best commensurate
 timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in
 general.
+
 This is obvious from Fig. 2, which shows the resonance spectrum $F( \nu )$, calculated for 15
 motions of 12 largest, fast spinning, objects of the system (with the mean diameters $\geq 500$ km and
 periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
 9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3 \theta$ C.L., i.e. with a
-chance probability $10^{-7}$ .
+chance probability $10^{-7}$.
+
 It seems very puzzling also that the spatial scale $t_{K} \approx 19.24 A.U.$ occurs to be the best
 commensurate with orbital sizes of the main planetary orbits of the solar system, - see Fig. 3,
 where the resonance spectrum $F( \nu )$ is plotted for 11 orbits, including those of asteroid belt, Pluto
 and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
 were multiplied by $\pi$). The primary peak - of the best commensurability - corresponds to the
-spatial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7 \theta$ C.L. (Kotov, 2013)
+spatial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7 \theta$ C.L. (Kotov, 2013).
+
 Close binaries are characterized by the $t_{\Theta}$ resonance too, with the $\pi$ number as a factor of ideal
 incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
 or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
 variables and related objects. The major peak, with C.L. of about $7 \theta$, corresponds to the timescale
 9590(70) s, coinciding within the error limits with $t_{K}$ (the stellar data were taken from all available
 binary stars catalogues and original papers).
+
 To compute the $F_{1} (\nu)$ spectrum, the program finds - for each test frequency $\nu$ - deviations of
 ratios $(2\nu_{i} /\pi \nu) k \geq 1$ from the nearest integers, and determines then the least-square minimum of such
 deviations. Here $\nu$ is the test frequency, $\nu_{i}$ minus the frequency of a given object, i = 1, 2, ...N - the
@@ -451,8 +457,10 @@ k = 1 or -1. The factor of two in Eq. (2) takes into account that second half of
 first one, and the transcendental number $\pi$ appears as a factor of orbital stability, or «ideal»
 incommensurability, of motions, or frequencies (the $\pi$ number, in fact, characterizes geometry of
 space; for details see Kotov, 2018).
+
 Recently it was shown, that the $t_{\Theta}$ timescale characterizes, statistically, the motion of superfast
 exoplanets too, see Figure 5.
+
 It was shown in fact, that a number of superfast, with periods < 2 days, exoplanets revolve
 around parent stars with periods, near-commensurate with timescales $t_{1}$ and/or $2 t_{1}/\pi$, where $t_{1} =
 9603(85) s$ agrees fairly well with the period $t_{K} \approx 9600$ s of the so-called «cosmic oscillation», found
