--- a/main.tex
+++ b/main.tex
@@ -395,7 +395,6 @@ $$\begin{array}{ll}
 \qquad  \qquad \Leftrightarrow \\
 G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
-This value will be confirmed, in the ppb range, in Section 4. The pertinence of such a simple polynomial cannot be admitted by the standard community, for instance arguing that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the realorigin of everything. It is strange that this term \textit{immergence} is a neologism. 
 
 \subsubsection{The omnipresence of the Kotov cycle in astrophysics}
 
@@ -944,6 +943,8 @@ in present mainstream thinking. Firstly, in biology, the assimilation of Darwin'
 with a scientific theory. Secondly, in quantum physics, the so-called `incertainty principles`, which are
 only manifestations of the general wave propagation (Field and flickering Matter), through Fourier
 transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
+
+The pertinence of such a simple polynomial cannot be admitted by the standard community, for instance arguing that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the realorigin of everything. It is strange that this term \textit{immergence} is a neologism. 
 
 
 \section {Conclusions Simplicity at work}
