--- a/main.tex
+++ b/main.tex
@@ -395,6 +395,7 @@ $$\begin{array}{ll}
 \qquad  \qquad \Leftrightarrow \\
 G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
+This value will be confirmed, in the ppb range, in Section 4.
 
 \subsubsection{The omnipresence of the Kotov cycle in astrophysics}
 
