--- a/main.tex
+++ b/main.tex
@@ -287,6 +287,14 @@ The immensity of the Cosmos thus receives a much simpler computo-holographic exp
 that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
 extreme precision, even with inflation. 
 
+With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that $N_{Ed}$ times the neutron mass, corrected by the ratio $H/p$, central in Section 4, gives, to 41 ppm the effective mass $3M/10$,so that:
+
+\begin{equation}
+Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n 
+\end{equation}
+
+showing a kind of symmetry between the masses.
+
 By identifying the large number of Eddington $N_{Ed} = 136 \cdot
 2^{256}$ as the equivalent number of neutrons in the effective mass $\frac{3M}{10}$ this leads to $R \approx 13,805 
 Gly$ at $0.05\%$ of the above value.
@@ -306,7 +314,8 @@ implying $\Theta_{CMB} = 2.725820805 K$, which is the area of the 4-sphere of ra
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Section 3). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy of Special Numbers of Mersenne 3, 7, 127, the sum of which is 137.
-The critical mass is related to the elementary masses by:
+
+Coming back to the central mass relation:
 \begin{equation}
 m_{P}^{4}\, = M m_{e} m_{p} m_{H}
 \end{equation}
@@ -494,13 +503,6 @@ days. The strongest peak of the composite commensurability corresponds to a peri
 at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \label{fig:figure_label}
 \end{figure}
-a
-
-a
-
-a
-
-a
 
 \subsubsection{The Tifft, Arp and Pioneer effects}
 
