--- a/main.tex
+++ b/main.tex
@@ -388,7 +388,7 @@ $
 [10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 \begin{equation}
-(\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
+(\lambdabar_{e}^{2}/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
 \end{equation}
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the $G$ value to $10^-{6}$ precision (ppm). It is
@@ -504,7 +504,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \subsubsection{The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now, this
-speed $v_{1}$ is compatible with $c/v_{1} \approx F/a$ where F =, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
+speed $v_{1}$ is compatible with $c/v_{1} \approx F/a$ where $F = \sqrt a_{w}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \lambdabar_{e}/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
