--- a/main.tex
+++ b/main.tex
@@ -388,7 +388,7 @@ $
 [10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 \begin{equation}
-(\lambdabar_{e}^{2}/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
+(\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
 \end{equation}
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the $G$ value to $10^-{6}$ precision (ppm). It is
@@ -504,7 +504,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \subsubsection{The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now, this
-speed $v_{1}$ is compatible with $c/v_{1} \approx F/a$ where $F = \sqrt a_{w}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \lambdabar_{e}/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
+speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
@@ -515,17 +515,17 @@ the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s$$, close to $$
 \subsection{The Logic of Prospective Dimensional Analysis}
 
 Physical relations use principally physical quantities as of type $Q = M^{x} L^{y} T^{t}$ , where
-the three categories, M, L and T are Mass, Length and Time measurements, and where the exponents are
-rational numbers. However, the addition of measures of different categories has no signification.
+the three categories, $M$, $L$ and $T$ are Mass, Length and Time measurements, and where the exponents are
+rational numbers. However, the addition of measures of different categories has no significance.
 This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So there
 must be a hidden common nature for the 3 categories, mass, length and time. This sustains the
 above single electron cosmic model [3]. Moreover, this mimics the Fundamental Principle of
-Arithmetics, founded on prime numbers, but limited to the three M, L and T categories. Indeed, with $t =
-R/c$, summing the square of $ln(M\prime/m_{e} )$, where $M\prime = R\prime c 2 /2G$ is the critical mass in the above
+Arithmetics, founded on prime numbers, but limited to the three $M$, $L$ and $T$ categories. Indeed, with $t =
+R/c$, summing the square of $ln(M^{\prime}/m_{e} )$, where $M^{\prime} = R^{\prime} c^{2} /2G$ is the critical mass in the above
 holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to
 40 ppm:
 \begin{equation}
-ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) \approx ln 2 (R_{GC} /\lambdabar_{e} )
+ln^{2} (M^{\prime}/m_{e} ) + ln^{2} (R/\lambdabar_{e}) + ln^2 (t/t_{e} ) \approx ln^2 (R_{GC} /\lambdabar_{e} )
 \end{equation}
 more precisely, to $10^{-8}$ , corresponding to $10{-7}$ precision on the above G value:
 
