--- a/main.tex
+++ b/main.tex
@@ -527,7 +527,7 @@ holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambda
 \begin{equation}
 ln^{2} (M^{\prime}/m_{e} ) + ln^{2} (R/\lambdabar_{e}) + ln^2 (t/t_{e} ) \approx ln^2 (R_{GC} /\lambdabar_{e} )
 \end{equation}
-more precisely, to $10^{-8}$ , corresponding to $10{-7}$ precision on the above G value:
+more precisely, to $10^{-8}$ , corresponding to $10^{-7}$ precision on the above G value:
 
 which traduces in function of $P = m_P/m_e$ by $ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx 2 ln^2(2P^5/a^6)$. Moreover, to $10^{-7}$, corresponding to $7 \times 10^{-6}$ precision on the above G value:
 
@@ -538,60 +538,55 @@ ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx exp(4e – 1/a)
 This is a dramatic geometrical confirmation for the visible Universe – Grandcosmos holographic couple, confirming the B.I.P.M. measurement of  G [11].
 
 
-\begin{equation}
-ln(\sqrt{(ln 2 (M\prime/m_{e} )} + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) \approx 2e - 1/2a
-\end{equation}
-This is a dramatic geometrical confirmation for the visible Universe - Grandcosmos holographic
-couple.
-
 \begin{figure}[h]
 \centering
 \includegraphics[width=8cm,height=6.5cm]{./figures/triaxis.png}
-\caption{Geo dimensional Universe-Grandcosmos couple. In a 3-D super-space , length, time and mass ratios are considered as vectors. The ratio of Grandcosmos radius by the Compton electron wavelength appears as the norm of the vector using for length and time projections the same ratio, that of the Hubble radiusby the electron Compton wavelength2, and for mass ratio that of $M\prime$ by the electron mass; $M\prime$ being the critical mass in the grandcosmos reduced spherical hologram. }
+\caption{Geo dimensional Universe-Grandcosmos couple. In a 3-D super-space, length, time and mass ratio logarithms are considered as vectors. The ratio of Grandcosmos radius by the Compton electron wavelength appears as the norm of the vector using for length and time projections the same ratio, that of the Hubble radius by the electron Compton wavelength, and for mass ratio that of $M^{\prime}$ by the electron mass; $M^{\prime}$ being the critical mass in the grandcosmos reduced spherical hologram. }
 \end{figure}
 
 Another crucial point in Physics is the existence of invariant fundamental constants. Thus,
-association of three of them must give characteristic values of M, L, T. So, approaching a domain in
-Physics necessitates to calculate characteristic values (M, L, T), from the three universal constants
+association of three of them must give characteristic values of $M$, $L$, $T$. So, approaching a domain in
+Physics necessitates to calculate characteristic values ($M, L, T$), from the three universal constants
 which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is
 largely used in Fluid Mechanics, were the equations are intractable, but is largely ignored in other
 domains, because there is no real mathematical foundation, apart the above essential remarks. But
 in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to
 neglect Prospective Dimensional Analysis.
-Now, the elimination of c in the above R formula means that the simplest basic dimensional
-analysis starting from $\hbar$, G and m, the Electron-Proton-Neutron mean mass gives a good
-approximation for R/2. Indeed, in the Hypothesis of a Coherent Cosmos, it is logical to discard c
-which is far two small a speed. This has not been observed during one century, since c is always
+
+Now, the elimination of c in the above $R$ formula means that the simplest basic dimensional
+analysis starting from $\hbar$, $G$ and $m$, the Electron-Proton-Neutron mean mass gives a good
+approximation for $R/2$. Indeed, in the Hypothesis of a Coherent Cosmos, it is logical to discard $c$
+which is far two small a speed. This has not been observed during one century, since $c$ is always
 believed to be the single mandatory foundation of Space-Time. The warning of Poincare, the true
 discoverer of Relativity: `use 4D space but do not confound Space and Time` has long been
-forgotten, and physicist have unwisely put c = 1 in their equations.
+forgotten, and physicist have unwisely put $c = 1$ in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
 \begin{equation}
-l \{\hbar,G,m\} = \hbar 2 /Gm^{3} \approx R/2
+l \{\hbar,G,m\} = \hbar^{2} /Gm^{3} \approx R/2
 \end{equation}
 but it took 9 years to nurture this publication [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product 
-\begin{equation}
-m_{e} \cdot m_{p} \cdot m_{H}
-\end{equation}. Moreover, the above critical condition
+$
+m_{e} \cdot m_{p} \cdot m_{H}$
+Moreover, the above critical condition
 links the time $t = \frac{R}{c}$ and the mean mass density by the c-free formula:
 \begin{equation}
 \rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times 10^{-27} kg \cdot m^{-3}
 \end{equation}
-, So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
+So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
 sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. One writes:
 \begin{equation}
 t\{\hbar,\rho_{c} ,G\}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}
 \end{equation}
-This idea of $\rho_{c}$ being a fundamental constant permits to define R without any ambiguity: the
-radius containing a critical mass. This means each point is the center of an equivalent black hole,
+This idea of $\rho_{c}$ being a fundamental constant permits to define $R$ without any ambiguity: the
+radius containing a critical mass. This means each atom is the center of an equivalent black hole,
 justifying the above application of the Bekenstein-Hawking entropy. Opponents would say that the
 center of a black hole presents a singularity: that is indeed the case in the above flickering Space-
-Mass-Time hypothesis. Other will argue that the flying galaxies cannot reach the celerity c at
-horizon, but it must be reckognized that Relativity is a local theory, so do not apply in Cosmology.
+Mass-Time hypothesis. Other will argue that the flying galaxies cannot reach the celerity $c$ at
+horizon, but it must be recognized that Relativity is a local theory, so do not apply in Cosmology.
 Indeed, even General Relativity in unable to define what is a Galilean frame, while the Foucault
 pendulus shows it directly, realizing the Cosmic Microwave Background frame, identified with the
 Grandcosmos frame, as seen above.
-Introducing the Fermi constant $G_{F}$ , the associated c-free length is very particular, to $1.7\%$:
+Introducing the Fermi constant $G_{F}$, the associated c-free length is very particular, to $1.7\%$:
 $$l\{\hbar,\rho_{c},G_{F}\} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
 Now, the following mandatory c-free times are close each over to $0.7\%$:
 \begin{equation}
