--- a/main.tex
+++ b/main.tex
@@ -601,17 +601,17 @@ where $O_{M}$ is the cardinal order of the Monster Group, the largest of the 26 
 suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge
 between apparently no-connected mathematical theories \cite{Borcherds}[17]. The simplest interpretation of T is the
 cosmic period of all events, in a perfectly deterministic and periodic Cosmos.
-Now, introducing the above Pioneer abnormal deceleration $g_{PN}$ , one gets the time: 
+Now, introducing the above Pioneer abnormal deceleration $g_{Pn}$ , one gets the time: 
+$
+t\{G, m_{e} , g_{Pn} \} = (Gm_{e} /g_{Pn}^{3} )^{1/4} = (t_{Pn}^{3} t\prime_{e} )^{1/4}
+$, where $t_{Pn} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
 \begin{equation}
-t\{G, m_{e} , g_{PN} \} = (Gm_{e} /g_{PN}^{3} )^{1/4} = (t_{PN}^{3} t\prime_{e} )^{1/4}
-\end{equation}, where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
-\begin{equation}
-t\{G, m_{e} , g_{PN} \} = t_{K} /(F/a)^{2}
+t\{G, m_{e} , g_{Pn} \} = t_{K} /(F/a)^{2}
 \end{equation}
 where the above Tifft factor F/a appears. The implication of the time 
-\begin{equation}
-t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s
-\end{equation}
+
+$t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
+
 confirms the above Planck's wall breakdown.
 
 \section{Fine-tuning with intermediate Mathematical Constants}
