--- a/main.tex
+++ b/main.tex
@@ -603,15 +603,13 @@ between apparently no-connected mathematical theories \cite{Borcherds}[17]. The 
 cosmic period of all events, in a perfectly deterministic and periodic Cosmos.
 Now, introducing the above Pioneer abnormal deceleration $g_{Pn}$ , one gets the time: 
 $
-t\{G, m_{e} , g_{Pn} \} = (Gm_{e} /g_{Pn}^{3} )^{1/4} = (t_{Pn}^{3} t\prime_{e} )^{1/4}
-$, where $t_{Pn} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
+t\{G, m_{e} , g_{Pn} \} = (Gm_{e} /g_{Pn}^{3} )^{1/4} = (t_{Pn}^{3} t^{\prime}_{e} )^{1/4}
+$, where $t_{Pn} = c/g_{PN}$ and $t^{\prime}_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
 \begin{equation}
 t\{G, m_{e} , g_{Pn} \} = t_{K} /(F/a)^{2}
 \end{equation}
 where the above Tifft factor F/a appears. The implication of the time 
-
 $t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
-
 confirms the above Planck's wall breakdown.
 
 \section{Fine-tuning with intermediate Mathematical Constants}
