--- a/main.tex
+++ b/main.tex
@@ -365,7 +365,7 @@ range, with $\Gamma$, the Atiyah Constant (section 4.5).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$, the graviton mass being: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$
-The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group, which appear again below.
+The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group, which appear again below. The  Monster  Group,  the largest of the 26 sporadic groups, is suspected by someresearchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories [17].
 
 \subsubsection{The Kotov Cosmic Coherent Oscillation Period}
 
@@ -597,10 +597,15 @@ This would be the periodic time of a Large Cosmologic cycle, which matches with 
 the holic dimension (see below), to 4\%. Comparing T with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
 $$T/t_{K} \approx O_{M} /\sqrt{2}$$
-where $O_{M}$ is the cardinal order of the Monster Group, the largest of the 26 sporadic groups, which is
-suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge
-between apparently no-connected mathematical theories \cite{Borcherds}[17]. The simplest interpretation of T is the
+where $O_{M}$, the cardinal order of the Monster Group, have been detected in the Section 2.3.1, again in relation with the Kotov period. Eliminating the later, this leads to:
+
+\begin{equation}
+T/t_0 \approx (3/esqrt2)O_M^3
+\end{equation}
+
+The simplest interpretation of T is the
 cosmic period of all events, in a perfectly deterministic and periodic Cosmos.
+
 Now, introducing the above Pioneer abnormal deceleration $g_{Pn}$ , one gets the time: 
 $
 t\{G, m_{e} , g_{Pn} \} = (Gm_{e} /g_{Pn}^{3} )^{1/4} = (t_{Pn}^{3} t^{\prime}_{e} )^{1/4}
