--- a/main.tex
+++ b/main.tex
@@ -599,12 +599,12 @@ $$T/t_{K} \approx O_{M} /\sqrt{2}$$
 where $O_{M}$, the cardinal order of the Monster Group, have been detected in the Section 2.3.1, again in relation with the Kotov period. Eliminating the later, this introduce the above chronon $t_0$:
 
 \begin{equation}
-T/t_0 \approx (3/esqrt2)O_M^3
+T/t_0 \approx (3/e\sqrt{2})O_M^3
 \end{equation}
 
-The  Monster  Group,  the largest of the 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories [17].
+The simplest interpretation is this is the number of quantum events in a cosmic cycle of period T, in a perfectly deteministic Cosmos. 
 
-The simplest interpretation is this is the number of quantum events in a cosmic cycle of period T, in a perfectly deteministic Cosmos. see below the dramatic properties of $O_M^3$.
+The  Monster  Group,  the largest of the 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories [17]. see below the dramatic properties of $O_M^3$.
 
 Now, introducing the above Pioneer abnormal deceleration $g_{Pn}$ , one gets the time: 
 $
