--- a/main.tex
+++ b/main.tex
@@ -619,40 +619,32 @@ confirms the above Planck's wall breakdown.
 
 \section{Fine-tuning with intermediate Mathematical Constants}
 \markright{Your Full Names.  Short Title of Your Paper}
-\subsection{The Arithmetical Monster Prime 137}
+\subsection{The Singular Prime 137}
 
-The pertinence of our above simple polynomial relations are not admitted by the standard
-community, for instance arguing that since the proton is composite, its mass cannot enter simple
-relations. The same argument is presented for the theoretical dependence of the electric constant a
-with other constants g and $g\prime$, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences.
-By contrast, the holistic approach implies immergences from a comprehension of the Cosmos. What a
-pity for `immergence` to be a neologism.
-The Eddington's proposal for a was the whole number 137, which intrigued many physicists for a
-century, but apparently nobody highlighted it as a fundamental mathematical property: it appears as a
+The initial Eddington's proposal for $a$ was the whole number 136, as the number of idependent parameters in the matrix 16 x 16. Later, one unity was added, becoming 137, a number which intrigued many physicists for a
+century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a
 Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
 series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
 space-time. Indeed:
-\begin{equation}
-137 = 11^{2} + 4^{2}
-\end{equation}
-\begin{equation}
-\frac{11}{4} = (\frac{\lambda_{CNB}}{\lambda_{CMB}})^{3}
-\end{equation}
+
+$$137 = 11^{2} + 4^{2}$$
+
+$$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}
+
 Since Riemann series are tied to the prime number distribution, it sounds odd and incredible that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. As ancient Egyptian used
 only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series 
-\begin{equation}
-S_{5} = \frac{137}{60}
-\end{equation}
-Indeed it appears in the Ptolemaic approximation for $\pi$: 
-\begin{equation}
-\frac{377}{120} = 2 + S_{5}/2
-\end{equation}
+
+$$S_{5} = 137/60$$
+S_{5}/2
+Indeed it appears in the Ptolemaic approximation for $\pi$: $2 +  S_{5}/2$
+
 Recall that the electrical constant a characterizes the force 
-\begin{equation}
-\frac{\hbar c}{al^{2}}
-\end{equation} between two l - distant
+
+$\hbar c/al^{2}$
+
+between two l - distant
 elementary charges, appearing central in Atomic Physics and in many fine-tuning relations [1]. It is
 misleading that physicists focused on only one property, the appearance of its fifth power in the
 Hydrogen hyper-fine spectra, and call its inverse the `fine-structure constant`. It is strange also that
