--- a/main.tex
+++ b/main.tex
@@ -629,7 +629,7 @@ space-time. Indeed:
 
 $$137 = 11^{2} + 4^{2}$$
 
-$$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}
+$$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$$
 
 Since Riemann series are tied to the prime number distribution, it sounds odd and incredible that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
