--- a/main.tex
+++ b/main.tex
@@ -637,14 +637,14 @@ that the basic precept `all occurs in the pole` was forgotten in this case. As a
 only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series 
 
 $$S_{5} = 137/60$$
-S_{5}/2
-Indeed it appears in the Ptolemaic approximation for $\pi$: $2 +  S_{5}/2$
+
+Indeed it appears in the Ptolemaic approximation for $\pi$: $377/120 = 2 +  S_{5}/2$
 
 Recall that the electrical constant a characterizes the force 
 
 $\hbar c/al^{2}$
 
-between two l - distant
+between two l-distant
 elementary charges, appearing central in Atomic Physics and in many fine-tuning relations [1]. It is
 misleading that physicists focused on only one property, the appearance of its fifth power in the
 Hydrogen hyper-fine spectra, and call its inverse the `fine-structure constant`. It is strange also that
