--- a/main.tex
+++ b/main.tex
@@ -621,13 +621,13 @@ confirms the above Planck's wall breakdown.
 \markright{Your Full Names.  Short Title of Your Paper}
 \subsection{The Singular Prime 137}
 
-The initial Eddington's proposal for $a$ was the whole number 136, as the number of idependent parameters in the matrix 16 x 16. Later, one unity was added, becoming 137, a number which intrigued many physicists for a
-century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a
-Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
+The initial Eddington's proposal for $a$ was the whole number 136, as the number of idependent parameters in the matrix 16 x 16. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
 series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
 space-time. Indeed:
 
 $$137 = 11^{2} + 4^{2}$$
+
+while, as seen above:
 
 $$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$$
 
@@ -640,11 +640,7 @@ $$S_{5} = 137/60$$
 
 Indeed it appears in the Ptolemaic approximation for $\pi$: $377/120 = 2 +  S_{5}/2$
 
-Recall that the electrical constant a characterizes the force 
-
-$\hbar c/al^{2}$
-
-between two l-distant
+Recall that the electrical constant $a$ characterizes the force $\hbarc/al^{2}$ between two l-distant
 elementary charges, appearing central in Atomic Physics and in many fine-tuning relations [1]. It is
 misleading that physicists focused on only one property, the appearance of its fifth power in the
 Hydrogen hyper-fine spectra, and call its inverse the `fine-structure constant`. It is strange also that
@@ -656,9 +652,8 @@ point for the superstring value n = 10, and the remarkable sum:
 \sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}
 \end{equation}
 So 
-\begin{equation}
-137 = 2^{7} - 1 + 3 + 7
-\end{equation}, the Hierarchic Combination form. But this appears also as 137 = 135 + 2,
+
+$137 = 2^{7} - 1 + 3 + 7$, the Hierarchic Combination form [3]. But this appears also as 137 = 135 + 2,
 with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
 compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
