--- a/main.tex
+++ b/main.tex
@@ -633,11 +633,10 @@ $$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$$
 
 Since Riemann series are tied to the prime number distribution, it sounds odd and incredible that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
-that the basic precept `all occurs in the pole` was forgotten in this case. As ancient Egyptian used
-only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series 
+that the basic precept `all occurs in the pole` was forgotten in this case. 
 
+As ancient Egyptian used only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series 
 $$S_{5} = 137/60$$
-
 Indeed it appears in the Ptolemaic approximation for $\pi$: $377/120 = 2 +  S_{5}/2$
 
 Recall that the electrical constant $a$ characterizes the force $\hbar c/al^{2}$ between two l-distant
@@ -651,15 +650,13 @@ point for the superstring value n = 10, and the remarkable sum:
 \begin{equation}
 \sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}
 \end{equation}
-So 
-
-$137 = 2^{7} - 1 + 3 + 7$, the Hierarchic Combination form [3]. But this appears also as 137 = 135 + 2,
+So $137 = 2^{7} - 1 + 3 + 7$, the Hierarchic Combination form [3]. But this appears also as 137 = 135 + 2,
 with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
 compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio a/137 acts as a canonical ratio.
+meaning the ratio a/137 acts as a canonical ratio. Moreover, it is very close (3 ppb) to $3^{a/F}$, where the Tifft factor $F/a$ appears again, prving that the base 3, the optimal whole number basis is also used by the Cosmos.
 
 \subsection{The Arithmetical Logic : Holic Principle and Topological Axis}
 
