--- a/main.tex
+++ b/main.tex
@@ -617,7 +617,7 @@ where the above Tifft factor F/a appears. The implication of the time
 $t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck's wall breakdown.
 
-\section{Fine-tuning with intermediate Mathematical Constants}
+\section{Intermediate Mathematical Constants}
 \markright{Your Full Names.  Short Title of Your Paper}
 \subsection{The Singular Prime 137}
 
@@ -656,27 +656,38 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio a/137 acts as a canonical ratio. Moreover, it is very close (3 ppb) to $3^{a/F}$, where the Tifft factor $F/a$ appears again, prving that the base 3, the optimal whole number basis is also used by the Cosmos.
+meaning the ratio a/137 acts as a canonical ratio. Moreover, it is very close (3 ppb) to $3^{a/F}$, where the Tifft factor $F/a$ appears again, proving that the base 3, the optimal whole number basis is also used by the Cosmos.
 
-\subsection{The Arithmetical Logic : Holic Principle and Topological Axis}
+\subsection{The Arithmetical Logic : Holic Principle}
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
-simplest one is $T^{2} = L^{3}$ , where T is a time ratio and L a length one, resolving, since 2 and 3 are co-
-prime, by $T^{2} = L^{3} = n^{6}$ , meaning the classical 6D space of classical mechanics. This particularizes
+simplest one is $T^{2} = L^{3}$ , where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
+prime, by $T^{2} = L^{3} = n^{6}$ , meaning the classical 6D space of classical point mechanics. This particularizes
 the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent
 study [18].
-This is the degenerate arithmetic form of the spatio-temporal holographic principle, It is also the
-3rd Kepler's law, but its diophantine form gives $L = n^{2}$ , the orbit law in the Hydrogen atom and in our
+
+This is the degenerate arithmetic form of the spatio-temporal holographic principle.
+
+This is also the 3rd Kepler's law, but its diophantine form gives $L = n^{2}$ , the orbit law in the Hydrogen atom and in our
 Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
 suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
 dimension n = 30, the natural extension of the above :
 \begin{equation}
 T^{2} = L^{3} = M^{5} = n^{30}
 \end{equation}
-where M is the mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relates to the apparent world. The entire Holic
-Principle, also relates to the quantum vacuum; it would involve a term $F^{7}$ , and of dimension 210.
+where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relates to the apparent world. The Complete Holic
+Principle involves a term $F^{7}$, and so introduces the dimension $30 x 7 = 210$. It is confirmed by (to 0.03\%):
+\begin{equation}
+R/\lambdabar_e \approx (2/\delta)^210
+\end{equation}
+confirming the central role of $\delta = R^{\prime}/R = pH/a^3$, which is to 1.6 ppm:
+\begin{equation}
+\delta /\approx e^{2/e^2} 
+\end{equation}
+confirming the central role of e.
 
-\subsection{The retention of Information}
+
+\subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R\prime$ shows itself an overwhelming holographic
 relation with the CMB Wien wavelength $l_{CMB}$ , to $0.01\%$:
